# mindex

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.gpu  FINAL_FIX_INSTRUCTIONS_FEB11_2026.md  FIX_MINDEX_DB_CONNECTION_FEB11_2026.md  MINDEX_AGENT_FIX_INSTRUCTIONS_FEB12_2026.md  MINDEX_ETL_STATUS_FEB12_2026.md  MYCOBRAIN_INTEGRATION_SUMMARY.md  PUSH_TO_GITHUB.bat  QUICK_FIX_MINDEX_FEB11_2026.md  README.md  _check_db_counts.py  _check_etl_logs.py  _check_logs.py  _check_mindex_health.py  _deploy_etl_vm.py  _deploy_mindex.py  _deploy_sine_acoustic_may27_2026.py  _fix_db_connection.py  _fix_mindex_deploy.py  _fix_mindex_grants2_may24_2026.py  _fix_mindex_grants3_may24_2026.py  _fix_mindex_grants_may24_2026.py  _full_redeploy.py  _hotfix_crep_fungi_may24_2026.py  _restart_docker_and_deploy.py  _start_all_and_test.py  _tail_logs.py  _test_api_keys_may27_2026.py  _test_connection.py  _test_mindex_bbox_may24_2026.py  _test_search.py  clean_errors.txt  collect.txt  docker-compose.yml  ensure_push.ps1  etl_celltowers.py  (+25 more)
.github/: labels.yml
docs/: ACOUSTIC_CLASSIFIER_SCOPE_MAY27_2026.md  AI_MODELS.md  ALL_LIFE_ETL_MAY02_2026.md  BLOCKS_SCHEDULER_MINDEX_SCOPE_JUN11_2026.md  CODEX_HANDOFF_EARTH_SIMULATOR_WEBSITE_APPS_JUN10_2026.md  ETL_SCHEDULER_ENABLEMENT_FEB10_2026.md  ETL_SYNC_GUIDE.md  FOR_NATUREOS_TEAM.md  HQ_MEDIA_IMPLEMENTATION_COMPLETE.md  HQ_MEDIA_SYSTEM_MAP.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MINDEX_AGENT_RUNTIME_AND_SCALE_JUN09_2026.md  MINDEX_ETL_FULL_AUDIT_JUN10_2026.md  MINDEX_ETL_REMEDIATION_COMPLETE_JUN10_2026.md  (+26 more)
(+521 files in other folders)
