[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindex"
version = "0.1.0"
description = "MINDEX backend services (FastAPI + ETL)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy>=2.0,<2.1",
    "asyncpg>=0.29,<0.30",
    "psycopg[binary]>=3.1,<3.2",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<0.28",
    "tenacity>=8.4,<9.0",
    "aiohttp>=3.9,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.2,<6.0",
    "requests>=2.32,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "respx>=0.21,<0.22",
    "ruff>=0.6,<0.7",
    "black>=24.4,<25.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
